--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {},
   "license": "Apache-2.0",
   "dependencies": {
-    "@truffle/hdwallet-provider": "2"
+    "@truffle/hdwallet-provider": "2",
+    "async-promise-pool": "^1.0.3",
+    "fs-extra": "^10.0.0",
+    "solc": "0.7.6",
+    "web3": "1.5.2",
+    "ethers": "^5.6.1",
+    "web3js-quorum": "21.7.0-rc1"
   }
 }
